# kaggle_Great_Barrier_Reef

./: .gitignore  Dockerfile  Makefile  README.md  cots_config.py  install-mmdetection.sh  install-yolov5.sh  install-yolox.sh  overwrite_yolox.py  pyproject.toml  requirements.txt  run.sh
eda/train-validation-split/: train-0.01.csv  train-0.05.csv  train-0.1.csv  train-0.2.csv
exp/: exp000-epoch50.py  exp000.py  exp004.py  exp005.py  exp006.py  exp008.py  exp009.py  exp010.py  exp011.py  exp012.py  exp013.py  exp014.py  exp015.py  exp016.py  exp017.py
src/: scores.py
